# DataTank

./: .flake8  README.md  pyproject.toml
COVID 19/docs/html/: index.html
Image Sampling/: README.md
Mathematical Functions/scripts/python/: create.py
Opendata/: README.md
Opendata/scripts/python/MHLW/: covid-19.py
Opendata/scripts/python/Tokyo Metropolitan Government/: cultural_facilities_project.py  designation_historic_site.py  life_and_statistics.py
Tokyo Metropolitan Government Opendata/: README.md
Tokyo Metropolitan Government Opendata/data/COVID-19/: README.md
Tokyo Metropolitan Government Opendata/scripts/python/: _utilities.py  covid-19.py  csvTojson.py  cultural_facilities_project.py  designation_historic_site.py  life_and_statistics.py  public_facilities.py
data/COVID/: covid_report.json
data/PCR/: pcr_positive_daily.csv  pcr_positive_daily.json
data/mathematical_functions/: Napier's_Constant_to_the_xth_Power_Function.csv
docs/: index.html
docs/html/: index.html
docs/js/: test.js
docs/js/PCR/: deploy_json.js
python/Mathematical Functions/: create.py
python/PCR/: csvTojson.py
python/Sampling_Image/: Image_to_CSV.py  YOASOBI.csv
src/image_sampling/: __main__.py  main.py
src/mathematical_functions/: README.md  __main__.py  const.py  create.py
src/opendata/mhlw/: __main__.py  const.py  covid_19.py
src/opendata/tokyo_metropolitan_government/: __main__.py  cultural_facilities_project.py  designation_historic_site.py  life_and_statistics.py  public_facilities.py
src/utils/: csv_util.py
(+8 files in other folders)
